# dedodev2-pytorch-inference

./: README.md  example_image_keypoints.py  example_image_pair_matching.py  example_pair_matching.py  example_video_feature_tracking.py  example_webcam_feature_tracking.py  pyproject.toml  requirements.txt
dedodev2/: __init__.py  decoder.py  dedode_descriptor.py  dedode_detector.py  dedode_models.py  dual_softmax_matcher.py  encoder.py  feature_tracker.py  utils.py
